--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -62,19 +62,6 @@
           <button data-modal-open type="button" name="order service" class="hero-button">
             Замовити послугу
           </button>
-        </div>
-        <div class="backdrop is-hidden" data-modal>
-          <div class="modal">
-            <button type="button" class="modal-close-icon" data-modal-close>
-              <svg class="close-icon">
-                <use
-                  href="./images/icon/symbol-defs.svg#icon-close"
-                  width="11px"
-                  height="11px"
-                ></use>
-              </svg>
-            </button>
-          </div>
         </div>
       </section>
 
@@ -309,42 +296,42 @@
           <ul class="clients-list">
             <li class="clients-list-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-logo" widht="41" height="47">
+                <svg class="clients-item-logo" width="106" height="60">
                   <use href="./images/icon/symbol-defs.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-logo" widht="40" height="52">
+                <svg class="clients-item-logo" width="106" height="60">
                   <use href="./images/icon/symbol-defs.svg#icon-client-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link" href=""
-                ><svg class="clients-item-logo" width="44" height="41">
+                ><svg class="clients-item-logo" width="106" height="60">
                   <use href="./images/icon/symbol-defs.svg#icon-client-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-logo" width="84" height="41">
+                <svg class="clients-item-logo" width="106" height="60">
                   <use href="./images/icon/symbol-defs.svg#icon-client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-logo" width="63" height="45">
+                <svg class="clients-item-logo" width="106" height="60">
                   <use href="./images/icon/symbol-defs.svg#icon-client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-list-item">
               <a class="clients-link" href="">
-                <svg class="clients-item-logo" width="94" height="44">
+                <svg class="clients-item-logo" width="106" height="60">
                   <use href="./images/icon/symbol-defs.svg#icon-client-6"></use>
                 </svg>
               </a>
@@ -376,7 +363,7 @@
             </ul>
           </address>
         </div>
-        <div class="social">
+        <div>
           <h3 class="social-title">приєднуйтесь</h3>
           <ul class="social-list">
             <li class="social-list-item">
@@ -409,9 +396,85 @@
             </li>
           </ul>
         </div>
+        <form class="footer-subscribe">
+          <p class="footer-form-desc">Підпишіться на розсилку</p>
+          <div class="footer-form">
+            <input type="email" name="user-email" class="footer-form-input" placeholder="E-mail" />
+            <button type="submit" class="footer-form-submit">
+              Підписатися
+              <svg class="footer-form-input-icon">
+                <use href="./images/icon/symbol-defs.svg#icon-send" width="24" height="24"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
-
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="modal-close-icon" data-modal-close>
+          <svg class="close-icon">
+            <use href="./images/icon/symbol-defs.svg#icon-close" width="11px" height="11px"></use>
+          </svg>
+        </button>
+        <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
+        <form class="modal-form">
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc"> Ім'я </span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-form-input"
+                pattern="^[a-zA-Zа-яА-ЯіІїЇ]+$"
+                minlength="2"
+              />
+              <svg class="modal-form-input-icon">
+                <use href="./images/icon/symbol-defs.svg#icon-modal-name"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Телефон</span>
+            <span class="modal-form-input-wrapper">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-form-input"
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx"
+              />
+              <svg class="modal-form-input-icon">
+                <use href="./images/icon/symbol-defs.svg#icon-modal-tel"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc">Пошта</span>
+            <span class="modal-form-input-wrapper">
+              <input type="email" name="user-email" class="modal-form-input" />
+              <svg class="modal-form-input-icon">
+                <use href="./images/icon/symbol-defs.svg#icon-modal-mail"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field-message">
+            <span class="modal-form-input-desc"> Коментар </span>
+            <textarea
+              name="user-message"
+              class="modal-form-message"
+              placeholder="Введіть текст"
+            ></textarea>
+          </label>
+          <input id="user-policy" type="checkbox" class="modal-form-check hidden" />
+          <label for="user-policy" class="modal-form-check-desc"
+            >Погоджуюся з розсилкою та приймаю&nbsp;
+            <a href="" class="user-policy-link">Умови договору</a></label
+          >
+          <button type="submit" class="modal-form-submit">Відправити</button>
+        </form>
+      </div>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
