--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -284,6 +284,18 @@
             </li>
           </ul>
         </div>
+        <form class="footer-subscribe">
+          <p class="footer-form-desc">Підпишіться на розсилку</p>
+          <div class="footer-form">
+            <input type="email" name="user-email" class="footer-form-input" placeholder="E-mail" />
+            <button type="submit" class="footer-form-submit">
+              Підписатися
+              <svg class="footer-form-input-icon">
+                <use href="./images/icon/symbol-defs.svg#icon-send" width="24" height="24"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
